Issue #540: Fixed horizontal scroll

--- a/src/app/modules/dashboard/components/parent-widget/parent-widget.component.less
+++ b/src/app/modules/dashboard/components/parent-widget/parent-widget.component.less
@@ -12,6 +12,6 @@
 
   .widget-content {
     flex: 1;
-    padding-bottom: 5px;
+    padding-bottom: 10px;
   }
 }
